--- a/action.yaml
+++ b/action.yaml
@@ -14,6 +14,6 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.codename }}
-    - ${{ inputs.package }}
+    - "CODE"
+    - "Package"
 
