--- a/.github/workflows/debrepo.yml
+++ b/.github/workflows/debrepo.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Create Debian repository test
         uses: ./
-        with:
-          package: 'debcvescan_0.1.10_linux_amd64.deb'
         env: 
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          PACKAGE: 'debcvescan_0.1.10_linux_amd64.deb'
+          CODENAME: 'buster'
