--- a/.github/workflows/debrepo.yml
+++ b/.github/workflows/debrepo.yml
@@ -13,7 +13,8 @@ jobs:
         env: 
           PUBLIC_KEY: ${{secrets.PUBLIC_KEY}}     
           PRIVATE_KEY: ${{secrets.PRIVATE_KEY}}     
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}          
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          TESTING: "1"
           REPOSITORY: './docs/debian'
           NAME: 'debcvescan'
           ARCH: 'amd64'
